# stm32reverb

./: CMakeLists.txt  dsp.ioc  notes
Core/Inc/: dsp.h  osc.h  params.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  wm8731.h
Core/Src/: allpass.h  application.cpp  application.hpp  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
